# b2get

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: b2.rs  main.rs
